# logpeek

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: condition.rs  config.rs  error.rs  interface.rs  lib.rs  matcher.rs  matchresult.rs
pkg/arch/: PKGBUILD
