[package]
name = "logpeek"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Log-file monitor program"
license = "MIT"
homepage = "https://github.com/unlink2/logpeek"
readme = "../README.md"
edition = "2018"

[lib]
name = "logpeek"
path = "src/lib.rs"

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.2"
