[package]
name = "logpeek"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Log-file monitor program"
license = "MIT"
homepage = "https://github.com/unlink2/logpeek"
readme = "../README.md"
edition = "2018"

[lib]
name = "logpeek"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
clap = "3.0.0-beta.5"
trickle = {git="https://github.com/unlink2/trickle"}
